crates/language-v2/tests/src/fail/parsing/duplicate_map_key/test.stderr
error: Duplicate map key.
  --> src/fail/parsing/duplicate_map_key/test.rs:19:25
   |
19 |                         field_1 = Required(Baz),
   |                         ^^^^^^^
